# proto

./: .bazelrc  .gitignore  README.md  fibonacci.pro  fibonacci_uint.pro
include/: BUILD.bazel  ansi_colors.h  assertm.h
include/ast/: program.h
include/ast/declarations/: declaration.h  type.h  variable.h
include/ast/definitions/: definition.h  function.h  variable.h
include/ast/expressions/: array.h  assignment.h  binary.h  call.h  cast.h  expression.h  literal.h  ternaryif.h  unary.h
include/ast/statements/: block.h  break.h  continue.h  for.h  if.h  return.h  statement.h  while.h
include/checker/: checker.h  checker_error.h  scope.h  symtable.h
include/checker/ast/: program.h
include/checker/ast/declarations/: type.h  variable.h
include/checker/ast/definitions/: function.h  variable.h
include/checker/ast/expressions/: expression.h
include/checker/ast/statements/: statement.h
include/checker/parsetree/: program.h
include/checker/parsetree/declarations/: type.h  variable.h
include/checker/parsetree/definitions/: function.h  variable.h
include/checker/parsetree/expressions/: expression.h
include/checker/parsetree/statements/: statement.h
include/cleaner/: cleaner.h  cleaner_warning.h
include/cleaner/ast/declarations/: type.h  variable.h
include/cleaner/ast/definitions/: function.h  variable.h
include/cleaner/ast/expressions/: expression.h
include/cleaner/ast/statements/: block.h  break.h  continue.h  for.h  if.h  return.h  statement.h  while.h
include/cleaner/parsetree/declarations/: type.h  variable.h
include/cleaner/parsetree/definitions/: function.h  variable.h
include/cleaner/parsetree/expressions/: expression.h
include/cleaner/parsetree/statements/: statement.h
include/cleaner/symbols/: scope.forward.h  scope.h  symtable.h
include/common/: token.h  token_type.h
include/inference/: inference.h  inference_error.h  literal.h
include/interpreter/: interpreter.h
include/interpreter/ast/definitions/: function.h  variable.h
include/interpreter/ast/expressions/: expression.h
include/interpreter/ast/statements/: statement.h
include/intrinsics/: reslib.h  stdlib.h
include/intrinsics/reslib/: resint.h  resuint.h
include/intrinsics/stdlib/: stdio.h
include/lexer/: lexer.h
include/parser/: parser.h
include/parsetree/declarations/: type.h
include/parsetree/definitions/: definition.h  function.h  variable.h
include/parsetree/expressions/: assignment.h  binary.h  call.h  cast.h  expression.h  group.h  variable.h
include/parsetree/statements/: block.h  break.h  continue.h  for.h  if.h  return.h  statement.h  while.h
include/symbols/: scope.h  symtable.h
include/utils/: file.h  inference.h  intrinsics.h  lexer.h  messages.h  parser.h  token.h
src/: BUILD.bazel  main.cc
src/ast/: BUILD.bazel  program.cc
src/ast/declarations/: type.cc  variable.cc
src/ast/definitions/: function.cc  variable.cc
src/ast/expressions/: array.cc  assignment.cc  binary.cc  call.cc  cast.cc  group.cc  literal.cc  ternaryif.cc  unary.cc  variable.cc
src/ast/statements/: block.cc  break.cc  continue.cc  for.cc  if.cc  return.cc  while.cc
src/checker/: BUILD.bazel  checker.cc  scope.cc  symtable.cc
src/checker/ast/: program.cc
src/checker/ast/declarations/: type.cc  variable.cc
src/checker/ast/definitions/: function.cc  variable.cc
src/checker/ast/expressions/: expression.cc
src/checker/ast/statements/: statement.cc
src/checker/parsetree/: program.cc
src/checker/parsetree/declarations/: type.cc  variable.cc
src/checker/parsetree/definitions/: function.cc  variable.cc
src/checker/parsetree/expressions/: expression.cc
src/checker/parsetree/statements/: statement.cc
src/cleaner/: BUILD.bazel  cleaner.cc
src/cleaner/parsetree/declarations/: type.cc  variable.cc
src/cleaner/parsetree/definitions/: function.cc  variable.cc
src/cleaner/parsetree/expressions/: expression.cc
src/cleaner/parsetree/statements/: statement.cc
src/common/: BUILD.bazel  token.cc  token_type.cc
src/inference/: BUILD.bazel  inference.cc  literal.cc
src/interpreter/: BUILD.bazel  interpreter.cc
src/interpreter/ast/definitions/: function.cc  variable.cc
src/interpreter/ast/expressions/: expression.cc
src/interpreter/ast/statements/: statement.cc
src/intrinsics/: BUILD.bazel  reslib.cc  stdlib.cc
src/intrinsics/reslib/: resint.cc  resuint.cc
src/intrinsics/stdlib/: stdio.cc
src/lexer/: BUILD.bazel  lexer.cc
src/parser/: BUILD.bazel  parser.cc
src/parsetree/: BUILD.bazel  program.cc
src/parsetree/declarations/: type.cc  variable.cc
src/parsetree/definitions/: function.cc  variable.cc
src/parsetree/expressions/: assignment.cc  binary.cc  call.cc  cast.cc  group.cc  literal.cc  ternaryif.cc  unary.cc  variable.cc
src/parsetree/statements/: block.cc  break.cc  continue.cc  for.cc  if.cc  return.cc  while.cc
src/symbols/: BUILD.bazel  scope.cc  symtable.cc
src/utils/: BUILD.bazel  file.cc  inference.cc  intrinsics.cc  lexer.cc  messages.cc  parser.cc  token.cc
tests/checker/: BUILD.bazel  scope_test.cc  symtable_test.cc
tests/checker/ast/: program_test.cc
tests/checker/ast/declarations/: type_test.cc  variable_test.cc
tests/checker/ast/definitions/: function_test.cc  variable_test.cc
tests/checker/ast/expressions/: expression_test.cc
tests/checker/ast/statements/: statement_test.cc
tests/checker/parsetree/: program_test.cc
tests/checker/parsetree/declarations/: type_test.cc  variable_test.cc
tests/checker/parsetree/definitions/: function_test.cc  variable_test.cc
tests/checker/parsetree/expressions/: expression_test.cc
tests/checker/parsetree/statements/: statement_test.cc
tests/cleaner/: BUILD.bazel  cleaner_test.cc
tests/cleaner/parsetree/expressions/: expression_test.cc
tests/inference/: BUILD.bazel  inference_test.cc  literal_test.cc
tests/interpreter/: BUILD.bazel  interpreter.cc
tests/interpreter/ast/expressions/: expression_test.cc
tests/interpreter/ast/statements/: statement_test.cc
tests/symbols/: BUILD.bazel  scope_test.cc  symtable_test.cc
(+9 files in other folders)
