cc_library(
    name = "include",
    hdrs = glob([
        "*.h",
        "common/*.h",
        "utils/*.h",
        "lexer/*.h",
        "parser/*.h",
        "checker/*.h",
        "checker/ast/*.h",
        "checker/ast/declarations/*.h",
        "checker/ast/definitions/*.h",
        "inference/*.h",
        "symbols/*.h",
        "ast/*.h",
        "ast/declarations/*.h",
        "ast/definitions/*.h",
        "ast/statements/*.h",
        "ast/expressions/*.h",
    ]),
    visibility = ["//visibility:public"],
)
