cc_library(
    name = "include",
    hdrs = glob([
        "*.h",
        "common/*.h",
        "utils/*.h",
        "lexer/*.h",
        "parser/*.h",
        "checker/*.h",
        "checker/parsetree/*.h",
        "checker/parsetree/declarations/*.h",
        "checker/parsetree/definitions/*.h",
        "checker/parsetree/statements/*.h",
        "checker/parsetree/expressions/*.h",
        "inference/*.h",
        "symbols/*.h",
        "parsetree/*.h",
        "parsetree/declarations/*.h",
        "parsetree/definitions/*.h",
        "parsetree/statements/*.h",
        "parsetree/expressions/*.h",
    ]),
    visibility = ["//visibility:public"],
)
