cc_library(
    name = "include",
    hdrs = glob([
        "*.h",
        "common/*.h",
        "utils/*.h",
        "lexer/*.h",
        "parser/*.h",
        "parsetree/*.h",
        "parsetree/declarations/*.h",
        "parsetree/definitions/*.h",
        "parsetree/statements/*.h",
        "parsetree/expressions/*.h",
        "inference/*.h",
        "symbols/*.h",
        "checker/*.h",
        "checker/parsetree/*.h",
        "checker/parsetree/declarations/*.h",
        "checker/parsetree/definitions/*.h",
        "checker/parsetree/statements/*.h",
        "checker/parsetree/expressions/*.h",
        "cleaner/*.h",
        "cleaner/ast/*.h",
        "cleaner/ast/declarations/*.h",
        "cleaner/ast/definitions/*.h",
        "cleaner/ast/statements/*.h",
        "cleaner/ast/expressions/*.h",
        "cleaner/parsetree/declarations/*.h",
        "cleaner/parsetree/definitions/*.h",
        "cleaner/parsetree/statements/*.h",
        "cleaner/parsetree/expressions/*.h",
        "cleaner/symbols/*.h",
        "intrinsics/*.h",
        "intrinsics/reslib/*.h",
        "intrinsics/stdlib/*.h",
        "interpreter/*.h",
        "interpreter/ast/definitions/*.h",
        "interpreter/ast/statements/*.h",
        "interpreter/ast/expressions/*.h",
    ]),
    visibility = ["//visibility:public"],
)
