cc_binary(
    name = "main",
    srcs = ["main.cc"],
    deps = [
        "//include:include",
        "//src/utils:utils",
        "//src/lexer:lexer",
        "//src/parser:parser",
        "//src/checker:checker",
        "//src/cleaner:cleaner",
        "//src/intrinsics:intrinsics",
        "//src/interpreter:interpreter",
    ],
    copts = ["-Iinclude"],
)
