cc_library(
    name = "ast",
    srcs = glob([
        "*.cc",
        "declarations/*.cc",
        "definitions/*.cc",
        "expressions/*.cc",
    ]),
    copts = ["-Iinclude"],
    deps = [
        "//include:include",
        "//src/common:common",
    ],
    visibility = ["//visibility:public"],
)
