cc_library(
    name = "ast",
    srcs = glob([
        "*.cc",
        "declarations/*.cc",
        "definitions/*.cc",
        "statements/*.cc",
        "expressions/*.cc",
    ]),
    copts = ["-Iinclude"],
    deps = [
        "//include:include",
        "//src/common:common",
        "//src/utils:utils",
        "//src/symbols:symbols",
    ],
    visibility = ["//visibility:public"],
)
