cc_library(
    name = "checker",
    srcs = glob([
        "*.cc",
        "ast/*.cc",
        "ast/declarations/*.cc",
        "ast/definitions/*.cc",
    ]),
    copts = ["-Iinclude"],
    deps = [
        "//include:include",
        "//src/common:common",
        "//src/ast:ast",
    ],
    visibility = ["//visibility:public"],
)
