cc_library(
    name = "checker",
    srcs = glob([
        "*.cc",
        "parsetree/*.cc",
        "parsetree/declarations/*.cc",
        "parsetree/definitions/*.cc",
        "parsetree/statements/*.cc",
        "parsetree/expressions/*.cc",
    ]),
    copts = ["-Iinclude"],
    deps = [
        "//include:include",
        "//src/common:common",
        "//src/parsetree:parsetree",
        "//src/inference:inference",
        "//src/symbols:symbols",
    ],
    visibility = ["//visibility:public"],
)
