cc_library(
    name = "cleaner",
    srcs = glob([
        "*.cc",
        "parsetree/declarations/*.cc",
        "parsetree/definitions/*.cc",
        "parsetree/statements/*.cc",
        "parsetree/expressions/*.cc",
    ]),
    copts = ["-Iinclude"],
    deps = [
        "//include:include",
        "//src/parsetree:parsetree",
    ],
    visibility = ["//visibility:public"],
)
