cc_test(
  name = "inference_test",
  size = "small",
  srcs = glob(["*.cc"]),
  deps = [
    "@com_google_googletest//:gtest_main",
    "//include:include",
    "//src/common:common",
    "//src/utils:utils",
    "//src/lexer:lexer",
    "//src/parser:parser",
    "//src/inference:inference",
    "//src/parsetree:parsetree",
    "//src/intrinsics:intrinsics",
  ],
  copts = ["-Iinclude"],
)
