cc_test(
  name = "interpreter_test",
  size = "small",
  srcs = glob([
    "*.cc",
    "ast/statements/*.cc",
    "ast/expressions/*.cc",
  ]),
  deps = [
    "@com_google_googletest//:gtest_main",
    "//include:include",
    "//src/common:common",
    "//src/lexer:lexer",
    "//src/parser:parser",
    "//src/checker:checker",
    "//src/cleaner:cleaner",
    "//src/interpreter:interpreter",
  ],
  copts = ["-Iinclude"],
)
